fix TopBar css not centered and configure box-sizing

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,23 @@
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
   background-color: #e6e6e6;
   margin: 0;
+  padding-top: 3.5rem;
+}
+
+.App {
+  & > main {
+    text-align: center;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
